basic compilation of java sources with the compiler api done